[package]
name = "hardback_server"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
serde="1.0"
serde_json = "1.0"
serde_derive ="1.0"
futures ={ version = "0.1.14"}
tokio-core ="0.1.9"
websocket = { version ="0.20.2"}
cardgame_macros = {path="../cardgame_macros"}
rust_wordnik = {path="../rust-wordnik"}

[lib]
name = "hardback_server"
path = "src/lib.rs"

[[bin]]
name = "hardback_server"
path = "src/bin/main.rs"