[package]
name = "hardback_server"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
serde_json = "1.0"
cardgame_macros = {path="../cardgame_macros"}
rand = "0.3.16"
rust_wordnik = {path="../rust-wordnik"}
websocket = { version ="0.20.2"}
tokio-core ="0.1.9"
futures ={ version = "0.1.14"}
hardback_server_lib ={path="../hardback_server_lib"}

[[bin]]
name = "hardback_server"
path = "src/bin/main.rs"